--- a/index.html
+++ b/index.html
@@ -32,43 +32,8 @@
               </div>
             </div>
 
-            <ul class="dropdown__list">
-              <li class="dropdown__list__item">
-                Black <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                White <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Navy <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Grey <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Green <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Red <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Multi <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Blue <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Pink <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Beige <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Purple <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Yellow <span class="list__item__count">(1014)</span>
-              </li>
+            <ul id="sort-list" class="dropdown__list">
+              <!--Append from js-->
             </ul>
           </div>
         </div>
@@ -93,25 +58,8 @@
               </div>
             </div>
 
-            <ul class="dropdown__list">
-              <li class="dropdown__list__item">
-                Black <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                White <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Navy <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Grey <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Green <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Red <span class="list__item__count">(1014)</span>
-              </li>
+            <ul id="product-list" class="dropdown__list">
+              <!--Append from js-->
             </ul>
           </div>
         </div>
@@ -136,25 +84,8 @@
               </div>
             </div>
 
-            <ul class="dropdown__list">
-              <li class="dropdown__list__item">
-                Black <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                White <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Navy <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Grey <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Green <span class="list__item__count">(1014)</span>
-              </li>
-              <li class="dropdown__list__item">
-                Red <span class="list__item__count">(1014)</span>
-              </li>
+            <ul id="sleeve-length-list" class="dropdown__list">
+              <!--Append from js-->
             </ul>
           </div>
         </div>
@@ -507,96 +438,14 @@
 
     <main>
       <div class="main__offers">
-        <div class="offers__item">
-          <img class="item__img" src="assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            Wrangler small logo crew neck t-shirt in white
-          </p>
-          <span class="item__price">£16.63</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            Wrangler logo chest stripe rugby polo in blue/white
-          </p>
-          <span class="item__price">£50.63</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            Wrangler kobel retro large logo ringer t-shirt in white
-          </p>
-          <span class="item__price">£20.97</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">Lyle & Scott polo in burgundy</p>
-          <span class="item__price">£44.12</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            <span class="item__paragraph__brand">COLLUSION</span> Unisex long
-            sleeve t-shirt with graphic print in neon green
-          </p>
-          <span class="item__price">£12.29</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            <span class="item__paragraph__brand">ASOS DESIGN</span> Disney
-            oversized t-shirt with rainbow
-          </p>
-          <span class="item__price">£22.42</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            <span class="item__paragraph__brand">COLLUSION</span> Unisex
-            oversized t-shirt with back print
-          </p>
-          <span class="item__price">£10.12</span>
-        </div>
-
-        <div class="offers__item">
-          <img class="item__img" src="./assets/images/offer.jpg" alt="Offer" />
-          <img class="item__heart-shape" src="./assets/images/heart-shape.png" alt="Hearth Shape">
-          <img class="item__heart-full" src="./assets/images/heart-full.png" alt="Hearth Full">
-          <p class="item__img-description">TALL</p>
-          <p class="item__paragraph">
-            <span class="item__paragraph__brand">ASOS DESIGN</span> Mickey
-            reloxed t-shirt with retro print
-          </p>
-          <span class="item__price">£18.08</span>
-        </div>
+        <!--Append from js-->
       </div>
+      <h1 class="main__favourite">Favourites: <span class="favourite__count"></span></h1>
     </main>
+
+    <script src="./assets/scripts/append.js"></script>
+    <script src="./assets/scripts/update.js"></script>
+    <script src="./assets/scripts/event.js"></script>
+    <script src="./assets/scripts/window.js"></script>
   </body>
 </html>
